Fix search button on mobile resolution

--- a/public/css/layout-basic.css
+++ b/public/css/layout-basic.css
@@ -163,7 +163,7 @@ nav:after {
 
 #mobileSearch button,
 #desktopSearch button {
-    /*align-self: stretch;*/
+    align-self: stretch!important;
 }
 
 #leftHeaderButton.custom-info,
